# wisent-1b

./: README.md  pyproject.toml
configs/: rej_1b.json  rey_1b_v2.json  wisent_1b_v2.json
rej_1b/: __init__.py  config.py  control.py  generate.py  model.py  model_v2.py  tokenizer.py  train.py  utils.py
rey_1b/: __init__.py  config.py  control.py  generate.py  model.py  model_v2.py  tokenizer.py  train.py  utils.py
scripts/: demo_geometric.py  demo_toy.py  generate.py  train.py
tests/: test_checkpoint.py  test_generate.py  test_model.py  test_model_v2.py  test_train.py
wisent_1b/: __init__.py  config.py  control.py  generate.py  model.py  model_v2.py  tokenizer.py  train.py  utils.py
